# CyberSec-projects-and-ressources

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  project_submission.yml
.github/learn-folder-template/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md  CHECKLIST.md  README.md
.github/workflows/: lint.yml  publish-api-rate-limiter.yml  publish-base64-tool.yml  publish-caesar-cipher.yml  publish-dns-lookup.yml  publish-network-traffic-analyzer.yml  update-submodule.yml
CHALLENGES/: CHALLENGE_TEMPLATE.md  README.md
CHALLENGES/beginner/caesar-cipher/: README.md
CHALLENGES/beginner/dns-lookup/: README.md
CHALLENGES/beginner/hash-cracker/: README.md
CHALLENGES/beginner/keylogger/: README.md
CHALLENGES/beginner/metadata-scrubber-tool/: README.md
PROJECTS/beginner/base64-tool/: .style.yapf  Justfile  README.md  pyproject.toml
PROJECTS/beginner/base64-tool/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/beginner/base64-tool/src/base64_tool/: __init__.py  cli.py  constants.py  detector.py  encoders.py  formatter.py  peeler.py  utils.py
PROJECTS/beginner/base64-tool/tests/: test_cli.py  test_detector.py  test_encoders.py  test_peeler.py  test_properties.py
PROJECTS/beginner/c2-beacon/: .gitignore  (+4 more)
PROJECTS/beginner/c2-beacon/backend/: pyproject.toml
PROJECTS/beginner/c2-beacon/backend/app/: __init__.py  __main__.py  config.py  database.py
PROJECTS/beginner/c2-beacon/backend/app/beacon/: registry.py  router.py  tasking.py
PROJECTS/beginner/c2-beacon/backend/app/core/: encoding.py  models.py  protocol.py
PROJECTS/beginner/c2-beacon/backend/app/ops/: manager.py  router.py
PROJECTS/beginner/c2-beacon/backend/tests/: conftest.py  test_app.py  test_encoding.py  test_protocol.py  test_registry.py  test_tasking.py
PROJECTS/beginner/c2-beacon/beacon/: beacon.py  pyproject.toml
PROJECTS/beginner/dns-lookup/: .gitignore  DEMO.md  README.md  justfile  pyproject.toml
PROJECTS/beginner/dns-lookup/dnslookup/: __init__.py  __main__.py  cli.py  output.py  resolver.py  whois_lookup.py
PROJECTS/beginner/dns-lookup/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md
PROJECTS/beginner/dns-lookup/tests/: __init__.py  test_resolver.py
PROJECTS/beginner/linux-ebpf-security-tracer/: .gitignore  .style.yapf  README.md  install.sh  justfile  pyproject.toml
PROJECTS/beginner/linux-ebpf-security-tracer/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/beginner/linux-ebpf-security-tracer/src/: config.py  detector.py  loader.py  main.py  processor.py  renderer.py
PROJECTS/beginner/linux-ebpf-security-tracer/src/ebpf/: file_tracer.c  network_tracer.c  privilege_tracer.c  process_tracer.c  system_tracer.c
PROJECTS/beginner/linux-ebpf-security-tracer/testdata/: sample_events.json
PROJECTS/beginner/linux-ebpf-security-tracer/tests/: conftest.py  test_detector.py  test_processor.py  test_renderer.py
PROJECTS/beginner/metadata-scrubber-tool/: .gitignore  DEMO.md  README.md  justfile  pyproject.toml  pyrightconfig.json
PROJECTS/beginner/metadata-scrubber-tool/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/beginner/metadata-scrubber-tool/scripts/: generate_png_tests.py
PROJECTS/beginner/metadata-scrubber-tool/src/: main.py
PROJECTS/beginner/metadata-scrubber-tool/src/commands/: read.py  scrub.py  verify.py
PROJECTS/beginner/metadata-scrubber-tool/src/core/: jpeg_metadata.py  png_metadata.py
PROJECTS/beginner/metadata-scrubber-tool/src/services/: batch_processor.py  excel_handler.py  image_handler.py  metadata_factory.py  metadata_handler.py  pdf_handler.py  powerpoint_handler.py  report_generator.py  worddoc_handler.py
PROJECTS/beginner/metadata-scrubber-tool/src/utils/: display.py  exceptions.py  formatter.py  get_target_files.py  logger.py
PROJECTS/beginner/metadata-scrubber-tool/tests/: conftest.py
PROJECTS/beginner/metadata-scrubber-tool/tests/e2e/: test_main.py  test_read_command.py  test_scrub_command.py  test_verify_command.py
PROJECTS/beginner/metadata-scrubber-tool/tests/integration/: test_metadata_factory.py
PROJECTS/beginner/metadata-scrubber-tool/tests/unit/: test_excel_handler.py  test_image_handler.py  test_pdf_handler.py  test_powerpoint_handler.py  test_worddoc_handler.py
PROJECTS/beginner/metadata-scrubber-tool/typings/piexif/: __init__.pyi  _common.pyi  _dump.pyi  _exceptions.pyi  _exif.pyi  _insert.pyi  _load.pyi  _remove.pyi  _transplant.pyi  _webp.pyi  helper.pyi
RESOURCES/: CERTIFICATIONS.md  COMMUNITIES.md  COURSES.md  FRAMEWORKS.md  README.md
SYNOPSES/advanced/: AI.Threat.Detection.md  Advanced.Persistent.Threat.Simulator.md  Adversarial.ML.Attacker.md  Automated.Penetration.Testing.md  Autonomous.Security.Operations.Center .md  Blockchain.Smart.Contract.Auditor.md  Bug.Bounty.Platform.md  Distributed.Password.Cracker.md  Exploit.Development.Framework.md  Hardware.Security.Module.Emulator.md  Kernel.Rootkit.Detection.md  Malware.Analysis.Platform.md  Network.Covert.Channel.md  Quantum.Resistant.Encryption.md  Supply.Chain.Security.Analyzer.md  Zero.Day.Vulnerability.Scanner.md
SYNOPSES/beginner/: Caesar.Cipher.md  DNS.Lookup.Tool.md  Hash.Cracker.md  Keylogger.md  Metadata.Scrubber.Tool.md  Network.Traffic.Analyzer.md  SSH.Brute.Force.Detector.md  Security.News.Scraper.md  Simple.Port.Scanner.md  Simple.Vulnerability.Scanner.md  WiFi.Network.Scanner.md
TEMPLATES/: .dockerignore.example  .editorconfig.example  .gitignore.example  .golangci.yml.example  .pre-commit-config.yaml.example  Makefile.example  biome.json.example  dependabot.yml.example  justfile.example  package.json.example  pyproject.toml.example  tsconfig.app.json.example  tsconfig.json.example  tsconfig.node.json.example
(+408 files in other folders)
