[project]
name = "c2-beacon-implant"
version = "1.0.0"
description = "C2 beacon implant for security research and education"
requires-python = ">=3.12"
authors = [
    {name = "CarterPerez-dev", email = "support@certgames.com"}
]
license = {text = "AGPL-3.0"}

dependencies = [
    "websockets>=15.0",
    "aiofiles>=24.1.0",
    "mss>=10.0.0",
    "pynput>=1.8.1",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beacon.py"]
